--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500|Open+Sans:700');
 
-
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 h1 {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 2em;
+	text-align: center;
+}
+
+h5 {
+	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 }
 
@@ -11,6 +23,10 @@ p {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	
+}
+
+li {
+	font-family: 'Montserrat', sans-serif;
 }
 
 .text-intro {
@@ -23,11 +39,102 @@ p {
 	
 	
 }
+.history {
+	padding-top: 5%;
+	padding-top: 5%;
+	}
+.more {
+	padding-left: 10%;
+	padding-right: 10%;
+	background-color: #EEEEEE;
+}
 
+#gender {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	background-color:#EEEEEE;
+}
+
+#process {
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+/* modal */ 
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.25);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+.modal-window:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-window > div {
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 2em;
+  background: #ffffff;
+  color: #333333;
+}
+.modal-window header {
+  font-weight: bold;
+}
+.modal-window h1 {
+  font-size: 150%;
+  margin: 0 0 15px;
+  color: #333333;
+}
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 70px;
+  text-decoration: none;
+}
+.modal-close:hover {
+  color: #000;
+}
+
+.history {
+	padding-left: 10%;
+	padding-right: 10%;
+}
 #team {
 	padding-top: 5%;
 	padding-bottom: 5%;
+	
 }
+
+#team p {
+	padding-left: 10%;
+	padding-right: 10%;
+}
+	
+	
 
 .text-intro p {
 	font-size: 1em;
@@ -56,8 +163,6 @@ h2 {
 }
 .over {
 	font-size: 1em;
-	margin-right: 10%;
-	margin-left: 10%;
 }
 .hero {
     /* Sizing */
@@ -97,7 +202,7 @@ h2 {
 #process {
 	padding-top: 5%;
 	padding-bottom: 5%;
-	background-color: #EEEEEE;
+
 }
 
 .hero h2 {
@@ -348,10 +453,44 @@ p {
   text-anchor: middle;
 }
 
+/* our story */
+
+.banner {
+    /* Sizing */
+    width: 100vw;
+    height: 40%;
+    
+    /* Flexbox stuff */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    /* Text styles */
+    text-align: center;
+	
+	/* background styles */
+	background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/invention.png');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.banner h1 {
+    /* Text styles */
+    font-size: 4em;
+	color: white;
+    
+    /* Margins */
+    margin-top: 0;
+    margin-bottom: 0.5em;
+	
+}
+
 /* quotes */
 
 .quotation{
-  font-size: 30px;
+  font-size: 16px;
   //margin: 0 auto;
   quotes: "\201C""\201D""\2018""\2019";
   padding: 10px 20px;
@@ -383,13 +522,274 @@ p {
 footer{
   margin:0;
   text-align: right;
-  font-size: 1.5em;
+  font-size: 1em;
   font-style: italic;
 }
-/* contact */
+/* blog feed */
 
+.blog .blog-post {
+  margin-bottom: 40px;
+}
+.blog .blog-post header {
+  position: relative;
+}
+.blog .blog-post header .date {
+  background-color: #fdfdfd;
+  position: absolute;
+  padding: 10px;
+  text-align: center;
+  font-weight: 500;
+  z-index: 9;
+  color: #2c2c2c;
+}
+.blog .blog-post .blog-content {
+  padding: 15px 28px;
+  border: 1px solid #f5f5f5;
+}
+.blog .blog-post .blog-content h4 {
+  margin: 20px 0;
+  letter-spacing: 1px;
+}
+.blog .blog-post .blog-content h4 a {
+  color: #333;
+}
+.blog .blog-post .blog-content .post-meta {
+  text-transform: uppercase;
+  margin-bottom: 18px;
+  padding-bottom: 10px;
+  font-size: 12px;
+  border-bottom: 1px solid #F5F5F5;
+}
+.blog .blog-post .blog-content .post-meta span {
+  color: #CCC;
+}
+.blog .blog-post .blog-content .post-meta span:first-child a {
+  color: #848484;
+}
+.blog .blog-post .blog-content .post-meta span a {
+  color: #CCC;
+  border-bottom: 1px rgba(0, 0, 0, 0);
+}
+.blog .blog-post .blog-content .post-meta span a:hover {
+  text-decoration: none;
+  border-bottom-style: solid;
+  border-color: inherit;
+}
+.blog .blog-post .blog-content .post-meta span {
+  padding-right: 10px;
+  border-right: 1px solid #CCC;
+  margin-right: 10px;
+}
+.blog .blog-post .blog-content .post-meta span:last-child {
+  margin-right: 0;
+  border-right: 0;
+  padding-right: 0;
+}
+.blog .blog-post .blog-content p {
+  color: #67666a;
+  line-height: 22px;
+}
+.blog .blog-post footer {
+  border: 1px solid #DDD;
+  padding: 0px 15px;
+}
+.blog .blog-post footer .comment-count {
+  color: #000;
+  position: relative;
+  padding-left: 25px;
+}
+.blog .blog-post footer .comment-count:hover,
+.blog .blog-post footer .comment-count:focus {
+  color: #000;
+}
+.blog .blog-post footer .read-more {
+  color: #000;
+  position: relative;
+  padding-left: 25px;
+  padding-right: 0;
+  text-transform: uppercase;
+}
+.blog .blog-post footer .read-more:hover,
+.blog .blog-post footer .read-more:focus {
+  color: #000;
+}
+
+@media (min-width: 768px) {
+  .blog .blog-post header .image-slider-carousel .carousel-control.left {
+    top: 200px;
+    bottom: 5px;
+    left: 220px;
+  }
+  .blog .blog-post header .image-slider-carousel .carousel-control.right {
+    top: 200px;
+  }
+}
+@media (min-width: 992px) {
+  .blog .blog-post header .image-slider-carousel .carousel-control.left {
+    top: 210px;
+    bottom: 5px;
+    left: 235px;
+  }
+  .blog .blog-post header .image-slider-carousel .carousel-control.right {
+    top: 210px;
+    right: 10px;
+    bottom: 5px;
+  }
+}
+.blog-standard .blog-post {
+  margin-bottom: 80px;
+}
+.blog-standard .blog-post:last-child {
+  margin-bottom: 0;
+}
+.blog-standard .blog-post .featured-image {
+  margin-bottom: 30px;
+}
+.blog-standard .blog-post .post-title {
+  margin-bottom: 15px;
+}
+.blog-standard .blog-post .post-title > a {
+  color: #5c5c5c;
+}
+.blog-standard .blog-post .post-title > a:hover {
+  color: #000000;
+  text-decoration: none;
+}
+.blog-standard .blog-post .post-meta {
+  color: silver;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 11px;
+  margin-bottom: 30px;
+}
+.blog-standard .blog-post .post-meta a {
+  color: #656565;
+}
+.blog-standard .blog-post .post-meta span {
+  margin: 0 6px;
+}
+.blog-standard .blog-post .read-more {
+  margin-top: 25px;
+}
+.blog-standard .blog-post .read-more a {
+  text-transform: uppercase;
+  color: black;
+  transition: all 0.2s;
+}
+.blog-standard .blog-post .read-more a:hover {
+  color: silver;
+  text-decoration: none;
+}
+
+/*overriding bootstrap's default pagination */
+.pagination-lg > li:last-child > a, .pagination-lg > li:last-child > span {
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.pagination-lg > li:first-child > a, .pagination-lg > li:first-child > span {
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.pagination > li {
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+  background-color: black;
+  border-color: black;
+}
+
+.pagination > li > a, .pagination > li > span {
+  color: #909090;
+}
+
+.sidebar {
+  padding: 0 0 0 30px;
+}
+.sidebar .widget {
+  margin-bottom: 60px;
+}
+.sidebar .widget.popular-posts .widget-content ul {
+  padding: 15px 0 0 0;
+  list-style: none;
+  color: #b0b0b0;
+}
+.sidebar .widget.popular-posts .widget-content ul li {
+  margin-bottom: 30px;
+}
+.sidebar .widget.popular-posts .widget-content ul .thumb {
+  margin-right: 10px;
+  margin-top: -10px;
+}
+.sidebar .widget.popular-posts .widget-content ul .title {
+  color: gray;
+}
+.sidebar .widget.popular-tags a {
+  margin-bottom: 6px;
+}
+.sidebar .widget.categories ul {
+  list-style: none;
+  padding: 0;
+}
+.sidebar .widget.categories ul li {
+  line-height: 3em;
+}
+.sidebar .widget.categories ul li:before {
+  content: "";
+  font: normal normal normal 14px/1 FontAwesome;
+  margin-right: 15px;
+}
+.sidebar .widget.categories ul li a {
+  color: black;
+}
+.sidebar .widget.categories ul li a:hover {
+  color: gray;
+}
+
+.left-sidebar .sidebar {
+  padding: 0 30px 0 0;
+}
+
+.blog-grid .blog-element {
+  max-height: 290px;
+  overflow: hidden;
+}
+.blog-grid .blog-element img {
+  width: 100%;
+}
+
+/* contact */
+.contact button {
+	
+}
 /* footer */
 
-.footer {
-	background-color: "#595553"
+#contact-bar {
+  background-color:#ff7575;
+  padding-bottom: -5%;
+  margin-bottom: 0%;
+  
 }
+#contact-bar p {
+  text-align: center;
+  padding-top: 3%;
+}
+#contact-bar a {
+  color: white;
+  text-decoration: none;
+}
+
+#contact-bar ul li{
+  padding:20px;
+  font-size: 270%;
+}
+
+#contact-bar ul li:hover{
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
