--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ h2 {
     text-align: center;
 	
 	/* background styles */
-	background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/hero.jpg');
+	background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/hero2.jpeg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
