--- a/style.css
+++ b/style.css
@@ -21,12 +21,32 @@ h5 {
 
 p {
 	font-family: 'Montserrat', sans-serif;
-	text-align: center;
+	text-align: left;
 	
 }
 
 li {
 	font-family: 'Montserrat', sans-serif;
+}
+
+.navbar li a {
+	text-decoration: none;
+	padding: 0;
+	
+}
+
+/* alternating colors */
+
+.orange1 {
+	background-color: #F9E79F;
+}
+
+.blue {
+	background-color: #D0ECE7;
+}
+
+.purple {
+	background-color: #E8DAEF;
 }
 
 .text-intro {
@@ -35,26 +55,30 @@ li {
 	padding-right: 10%;
 	padding-top: 5%;
 	padding-bottom: 5%;
-	background-color: #EEEEEE;
 	
 	
 }
 .history {
 	padding-top: 5%;
-	padding-top: 5%;
 	}
 .more {
 	padding-left: 10%;
 	padding-right: 10%;
-	background-color: #EEEEEE;
+	background-color: #D0ECE7;
 }
 
+.spacing {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
 #gender {
 	padding-left: 10%;
 	padding-right: 10%;
 	padding-top: 5%;
 	padding-bottom: 5%;
-	background-color:#EEEEEE;
+	background-color:#F9E79F;
 }
 
 #process {
@@ -160,6 +184,7 @@ h2 {
 .team-img {
 	width: 400px;
 	height: auto;
+	margin: 0;
 }
 .over {
 	font-size: 1em;
@@ -187,7 +212,7 @@ h2 {
 
 .hero h1 {
     /* Text styles */
-    font-size: 4em;
+    font-size: 3em;
 	color: white;
     
     /* Margins */
@@ -233,168 +258,12 @@ h2 {
 	font-family: 'Montserrat', sans-serif;
 }
 
-/* nav */
+/*nav*/
 .navbar {
-  position: fixed;
-  z-index: 999;
-  top: 50%;
-  right: 50px;
-  transform: translateY(-50%);
-}
-.navbar .nav-menu {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.navbar .nav-menu li {
-  position: relative;
-  min-width: 200px;
-  text-align: right;
-}
-.navbar .nav-menu li .dot {
-  display: block;
-  color: #fff;
-  padding: 5px 0;
-}
-.navbar .nav-menu li .dot::before,
-.navbar .nav-menu li .dot::after {
-  display: block;
-  position: absolute;
-  content: '';
-  border-radius: 50%;  
-  top: 50%;  
-  transition: all .3s ease;
-}
-.navbar .nav-menu li .dot::before {
-  width: 5px;
-  height: 5px;
-  right: 0;
-  border: 2px solid #181818;
-  transform: translateY(-50%);
-}
-.navbar .nav-menu li .dot::after {
-  width: 15px;
-  height: 15px;
-  border: 2px solid #f44336;
-  right: -5px;
-  transform: translateY(-50%) scale(0);
-}
-.navbar .nav-menu li .dot.active::before,
-.navbar .nav-menu li:hover .dot::before {
-  background: #f44336;
-  border-color: #f44336;
-}
-.navbar .nav-menu li .dot.active::after,
-.navbar .nav-menu li:hover .dot::after {
-  transform: translateY(-50%) scale(1);  
-}
-.navbar .nav-menu li .dot span {
-  display: inline-block;
-  opacity: 0;
-  font-weight: 700;
-  letter-spacing: .5px;
-  text-transform: capitalize;
-  background-color: #f44336;
-  padding: 10px 20px;
-  border-radius: 3px;
-  margin-right: 30px;
-  transform: translateX(20px);
-  transition: all .3s ease;
-}
-.navbar .nav-menu li .dot span::before {
-  display: block;
-  position: absolute;
-  content: '';
-  border-left: 7px solid #f44336;
-  border-top: 7px solid transparent;
-  border-bottom: 7px solid transparent;
-  top: 50%;
-  transform: translate(7px, -50%);
-  right: 0;
-  transition: all .3s ease;
-}
-.navbar .nav-menu li .dot.active span,
-.navbar .nav-menu li:hover .dot span {
-  transform: translateX(0px);
-  opacity: 1;
+	
 }
 
 /* end nav */
-/*faq */
-
-/* Styles for page */ 
-.accordion {
-  width: 70%;
-  margin: 150px auto;
-}
-
-body {
-  color: #4B4B4B;
-  font-family: sans-serif;
-}
-body a {
-  cursor: pointer;
-  color: #4B4B4B;
-  text-decoration: none;
-}
-
-span {
-  letter-spacing: 0px;
-}
-
-p {
-  font-weight: 200;
-  line-height: 1.5;
-  font-size: 14px;
-}
-
-/* Styles for Accordion */
-.toggle:last-child {
-  border-bottom: 1px solid #dddddd;
-}
-.toggle .toggle-title {
-  position: relative;
-  display: block;
-  border-top: 1px solid #dddddd;
-  margin-bottom: 6px;
-}
-.toggle .toggle-title h3 {
-  font-size: 20px;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0px;
-  line-height: 1;
-  cursor: pointer;
-  font-weight: 200;
-}
-.toggle .toggle-inner {
-  padding: 7px 25px 10px 25px;
-  display: none;
-  margin: -7px 0 6px;
-}
-.toggle .toggle-inner div {
-  max-width: 100%;
-}
-.toggle .toggle-title .title-name {
-  display: block;
-  padding: 25px 25px 14px;
-}
-.toggle .toggle-title a i {
-  font-size: 22px;
-  margin-right: 5px;
-}
-.toggle .toggle-title i {
-  position: absolute;
-  background: url("http://arielbeninca.com/Storage/plus_minus.png") 0px -24px no-repeat;
-  width: 24px;
-  height: 24px;
-  transition: all 0.3s ease;
-  margin: 20px;
-  right: 0;
-}
-.toggle .toggle-title.active i {
-  background: url("http://arielbeninca.com/Storage/plus_minus.png") 0px 0px no-repeat;
-}
-
 
 /* percent circles */
 
@@ -768,13 +637,13 @@ footer{
 /* footer */
 
 #contact-bar {
-  background-color:#ff7575;
+  background-color:#73C6B6;
   padding-bottom: -5%;
   margin-bottom: 0%;
   
 }
 #contact-bar p {
-  text-align: center;
+  text-align: left;
   padding-top: 3%;
 }
 #contact-bar a {
@@ -785,6 +654,8 @@ footer{
 #contact-bar ul li{
   padding:20px;
   font-size: 270%;
+  float: center;
+  display: inline-block;
 }
 
 #contact-bar ul li:hover{
