--- a/style.css
+++ b/style.css
@@ -25,15 +25,49 @@ p {
 	
 }
 
-li {
-	font-family: 'Montserrat', sans-serif;
+
+/*navbar */
+.nav {
+	position: absolute;
+	top: 4%;
+	right: -11%;
+}
+.nav ul div li{
+	text-align: right;
+    
 }
 
-.navbar li a {
+
+ 
+.nav li a {
 	text-decoration: none;
-	padding: 0;
-	
+    display: inline-block;
+	color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    padding-top: 4px;
+	font-size: 16px;
 }
+
+.cool-link::after {
+	content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    transition: width .3s;
+}
+
+.cool-link:hover::after {
+	width: 100%;
+    transition: width .3s;
+}
+
+.logo {
+	text-align: left;
+	padding-left: -20%;
+}
+
 
 /* alternating colors */
 
@@ -109,14 +143,14 @@ li {
   pointer-events: auto;
 }
 .modal-window > div {
-  width: 50%;
+  width: 60%;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   padding: 2em;
-  background: #ffffff;
+  background: #EAE8E8;
   color: #333333;
 }
 .modal-window header {
@@ -186,6 +220,10 @@ h2 {
 	height: auto;
 	margin: 0;
 }
+
+.font {
+	font-family: 'Montserrat', sans-serif; 
+}
 .over {
 	font-size: 1em;
 }
@@ -195,24 +233,25 @@ h2 {
     height: 100vh;
     
     /* Flexbox stuff */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /*display: flex;*/
+    /*justify-content: center;
+    align-items: center;*/
     
     /* Text styles */
-    text-align: center;
+    /*text-align: center;*/
 	
 	/* background styles */
-	background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/hero2.jpeg');
+	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('images/hero2.jpeg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+	box-shadow: 0 3000px rgba(208, 236, 231, 0.4) inset;
 }
 
 .hero h1 {
     /* Text styles */
-    font-size: 3em;
+    font-size: 4em;
 	color: white;
     
     /* Margins */
@@ -258,12 +297,7 @@ h2 {
 	font-family: 'Montserrat', sans-serif;
 }
 
-/*nav*/
-.navbar {
-	
-}
 
-/* end nav */
 
 /* percent circles */
 
@@ -338,11 +372,12 @@ h2 {
     text-align: center;
 	
 	/* background styles */
-	background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/invention.png');
+	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('images/invention.png');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+	box-shadow: 0 3000px rgba(208, 236, 231, 0.4) inset;
 }
 
 .banner h1 {
@@ -394,241 +429,7 @@ footer{
   font-size: 1em;
   font-style: italic;
 }
-/* blog feed */
 
-.blog .blog-post {
-  margin-bottom: 40px;
-}
-.blog .blog-post header {
-  position: relative;
-}
-.blog .blog-post header .date {
-  background-color: #fdfdfd;
-  position: absolute;
-  padding: 10px;
-  text-align: center;
-  font-weight: 500;
-  z-index: 9;
-  color: #2c2c2c;
-}
-.blog .blog-post .blog-content {
-  padding: 15px 28px;
-  border: 1px solid #f5f5f5;
-}
-.blog .blog-post .blog-content h4 {
-  margin: 20px 0;
-  letter-spacing: 1px;
-}
-.blog .blog-post .blog-content h4 a {
-  color: #333;
-}
-.blog .blog-post .blog-content .post-meta {
-  text-transform: uppercase;
-  margin-bottom: 18px;
-  padding-bottom: 10px;
-  font-size: 12px;
-  border-bottom: 1px solid #F5F5F5;
-}
-.blog .blog-post .blog-content .post-meta span {
-  color: #CCC;
-}
-.blog .blog-post .blog-content .post-meta span:first-child a {
-  color: #848484;
-}
-.blog .blog-post .blog-content .post-meta span a {
-  color: #CCC;
-  border-bottom: 1px rgba(0, 0, 0, 0);
-}
-.blog .blog-post .blog-content .post-meta span a:hover {
-  text-decoration: none;
-  border-bottom-style: solid;
-  border-color: inherit;
-}
-.blog .blog-post .blog-content .post-meta span {
-  padding-right: 10px;
-  border-right: 1px solid #CCC;
-  margin-right: 10px;
-}
-.blog .blog-post .blog-content .post-meta span:last-child {
-  margin-right: 0;
-  border-right: 0;
-  padding-right: 0;
-}
-.blog .blog-post .blog-content p {
-  color: #67666a;
-  line-height: 22px;
-}
-.blog .blog-post footer {
-  border: 1px solid #DDD;
-  padding: 0px 15px;
-}
-.blog .blog-post footer .comment-count {
-  color: #000;
-  position: relative;
-  padding-left: 25px;
-}
-.blog .blog-post footer .comment-count:hover,
-.blog .blog-post footer .comment-count:focus {
-  color: #000;
-}
-.blog .blog-post footer .read-more {
-  color: #000;
-  position: relative;
-  padding-left: 25px;
-  padding-right: 0;
-  text-transform: uppercase;
-}
-.blog .blog-post footer .read-more:hover,
-.blog .blog-post footer .read-more:focus {
-  color: #000;
-}
-
-@media (min-width: 768px) {
-  .blog .blog-post header .image-slider-carousel .carousel-control.left {
-    top: 200px;
-    bottom: 5px;
-    left: 220px;
-  }
-  .blog .blog-post header .image-slider-carousel .carousel-control.right {
-    top: 200px;
-  }
-}
-@media (min-width: 992px) {
-  .blog .blog-post header .image-slider-carousel .carousel-control.left {
-    top: 210px;
-    bottom: 5px;
-    left: 235px;
-  }
-  .blog .blog-post header .image-slider-carousel .carousel-control.right {
-    top: 210px;
-    right: 10px;
-    bottom: 5px;
-  }
-}
-.blog-standard .blog-post {
-  margin-bottom: 80px;
-}
-.blog-standard .blog-post:last-child {
-  margin-bottom: 0;
-}
-.blog-standard .blog-post .featured-image {
-  margin-bottom: 30px;
-}
-.blog-standard .blog-post .post-title {
-  margin-bottom: 15px;
-}
-.blog-standard .blog-post .post-title > a {
-  color: #5c5c5c;
-}
-.blog-standard .blog-post .post-title > a:hover {
-  color: #000000;
-  text-decoration: none;
-}
-.blog-standard .blog-post .post-meta {
-  color: silver;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 11px;
-  margin-bottom: 30px;
-}
-.blog-standard .blog-post .post-meta a {
-  color: #656565;
-}
-.blog-standard .blog-post .post-meta span {
-  margin: 0 6px;
-}
-.blog-standard .blog-post .read-more {
-  margin-top: 25px;
-}
-.blog-standard .blog-post .read-more a {
-  text-transform: uppercase;
-  color: black;
-  transition: all 0.2s;
-}
-.blog-standard .blog-post .read-more a:hover {
-  color: silver;
-  text-decoration: none;
-}
-
-/*overriding bootstrap's default pagination */
-.pagination-lg > li:last-child > a, .pagination-lg > li:last-child > span {
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-}
-
-.pagination-lg > li:first-child > a, .pagination-lg > li:first-child > span {
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-}
-
-.pagination > li {
-  display: inline-block;
-  margin-right: 8px;
-}
-
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-  background-color: black;
-  border-color: black;
-}
-
-.pagination > li > a, .pagination > li > span {
-  color: #909090;
-}
-
-.sidebar {
-  padding: 0 0 0 30px;
-}
-.sidebar .widget {
-  margin-bottom: 60px;
-}
-.sidebar .widget.popular-posts .widget-content ul {
-  padding: 15px 0 0 0;
-  list-style: none;
-  color: #b0b0b0;
-}
-.sidebar .widget.popular-posts .widget-content ul li {
-  margin-bottom: 30px;
-}
-.sidebar .widget.popular-posts .widget-content ul .thumb {
-  margin-right: 10px;
-  margin-top: -10px;
-}
-.sidebar .widget.popular-posts .widget-content ul .title {
-  color: gray;
-}
-.sidebar .widget.popular-tags a {
-  margin-bottom: 6px;
-}
-.sidebar .widget.categories ul {
-  list-style: none;
-  padding: 0;
-}
-.sidebar .widget.categories ul li {
-  line-height: 3em;
-}
-.sidebar .widget.categories ul li:before {
-  content: "";
-  font: normal normal normal 14px/1 FontAwesome;
-  margin-right: 15px;
-}
-.sidebar .widget.categories ul li a {
-  color: black;
-}
-.sidebar .widget.categories ul li a:hover {
-  color: gray;
-}
-
-.left-sidebar .sidebar {
-  padding: 0 30px 0 0;
-}
-
-.blog-grid .blog-element {
-  max-height: 290px;
-  overflow: hidden;
-}
-.blog-grid .blog-element img {
-  width: 100%;
-}
 
 /* contact */
 .contact button {
@@ -637,7 +438,7 @@ footer{
 /* footer */
 
 #contact-bar {
-  background-color:#73C6B6;
+  background-color:#A2D9CE;
   padding-bottom: -5%;
   margin-bottom: 0%;
   
